# gh_actions_dashboard

./: .gitignore  Cargo.toml  docker-compose.yml  vercel.json
.github/workflows/: deploy_backend.yml  deploy_preview.yml  deploy_production.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml  index.html
backend/src/: main.rs
backend/src/github/: auth.rs  mod.rs  org.rs  repos.rs  workflow.rs
backend/src/routes/: all_user_repos.rs  mod.rs  org.rs  repos.rs  workflow.rs
frontend/: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  scratch.html  vercel.json
frontend/src/: main.rs
frontend/src/api_routes/: routes.rs
frontend/src/components/: mod.rs  repos.rs
frontend/src/components/counter/: counter.rs
frontend/src/components/workflow/: mod.rs  types.rs  workflow.rs
frontend/src/environment/: enviroment.rs
leptos/: Cargo.toml  README.md
leptos-2/: Cargo.toml
leptos-2/src/: app.rs  main.rs
leptos/backend/: Cargo.toml
leptos/backend/src/: main.rs
leptos/frontend/: Cargo.toml
leptos/frontend/src/: lib.rs
leptos/src/: app.rs  fileserv.rs  main.rs
leptos/src/routes/: home.rs  mod.rs  repo.rs  workflow_run.rs
leptos/style/: main.scss
src/: main.rs
src/github/: mod.rs  workflow.rs
