[package]
name = "gh_dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-app-auth = "3.0.0"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
tokio = { version = "1.27.0", features = ["rt", "macros", "io-util", "rt", "time"] }
octocrab = "0.19.0"
anyhow = "1.0.70"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
