[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-types = "0.1.1"
log = "0.4.17"
reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
