[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["serde", "ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_dom = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
axum = "0.6.18"
tokio = "1.28.2"
tower = "0.4.13"
tower-http = "0.4.0"
serde = { version = "1.0.163", features = ["derive"] }
